<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:transitionName="@string/detail_transition">

    <include layout="@layout/toolbar_main" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/normal_margin">

        <ImageView
            android:id="@+id/dish_image"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:layout_marginBottom="@dimen/normal_margin"
            android:src="@drawable/one"/>

        <TextView
            android:id="@+id/dish_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/normal_margin"
            android:text="@string/Description"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

        <TextView
            android:id="@+id/dish_allergens"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/normal_margin"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:text="@string/allergens"/>

        <TextView
            android:id="@+id/dish_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/normal_margin"
            android:text="@string/Price"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:layout_gravity="end"
            android:textAlignment="center"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:text="@string/addToTable"
                android:id="@+id/addDishToTable"/>
        </RelativeLayout>

    </LinearLayout>


</LinearLayout>