<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
    <android.support.v7.widget.CardView
        android:layout_margin="@dimen/normal_margin"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_margin="16dp">

            <ImageView
                android:id="@+id/dish_image"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:src="@drawable/one"/>

            <RelativeLayout
                android:id="@+id/dish_text_content"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp">

                <TextView
                    android:id="@+id/dish_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_toLeftOf="@+id/dish_price"
                    android:layout_alignParentTop="true"
                    android:text="@string/name"
                    android:textSize="24sp"/>

                <TextView
                    android:id="@+id/dish_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:text="@string/price"
                    android:textStyle="normal|bold"
                    android:fontFamily="sans-serif"
                    android:textSize="20sp"/>


                <TextView
                    android:id="@+id/dish_allergens"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@id/dish_name"
                    android:layout_marginTop="16dp"
                    android:text="@string/Allergens"/>



            </RelativeLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</FrameLayout>